# rick-morty

./: Cargo.toml  Makefile  README.md
src/: cache.rs  main.rs  server.rs
src/api/: api.rs  characters.rs  episodes.rs  locations.rs  mod.rs
