[package]
name = "rick-morty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "3.2.23", features = ["derive"] }
reqwest = {version = "0.11.12", features = ["json"]}
serde = {version = "1.0.147", features = ["derive"]}
futures = "0.3.25"
memory-cache-rs = "0.2.0"
actix-web = "4.2.1"
cached = "0.40.0"
rand = "0.8.5"
serde_json = "1.0.87"
redis = {version = "0.22.1", features = ["tls"]}
bytes = "1.2.1"

[dev-dependencies]
mockito = "0.28"
